# ed_TRPO_PyTest

./: .gitignore  main.py  pyproject.toml
src/: calculator.py  discount.py  order.py  string_utils.py
tests/: test_calculator.py  test_discount.py  test_order.py  test_string_utils.py
