[project]
name = "ed-trpo-pytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
markers = [
    "fast: быстрые тесты (без внешних зависимостей)",
    "slow: медленные тесты (база данных, сеть)",
    "smoke: базовые тесты для проверки работоспособности",
]
